--- a/style.css
+++ b/style.css
@@ -513,7 +513,7 @@ button.search:hover {
   font-size: 1.2rem;
   font-weight: bold;
   position: relative;
-  z-index: 999;
+  z-index: 100;
 }
 
 .hero-text a:hover {
